# cclimits

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: make_screenshot.py
src/cclimits/: __init__.py  api.py  cli.py  collect.py  creds.py  model.py  refresh.py  render.py  shell.py
tests/: test_cclimits.py
