[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cclimits"
version = "0.5.0"
description = "See the usage limits of every Claude Code account you own, at once."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Achill Rudolph" }]
keywords = ["claude", "claude-code", "usage", "rate-limit", "quota", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
# No runtime dependencies, on purpose: this is a tool you want to `pipx install`
# and forget, not one that drags a dependency tree into your shell prompt.
dependencies = []

[project.urls]
Homepage = "https://github.com/acrdlph/cclimits"
Issues = "https://github.com/acrdlph/cclimits/issues"

[project.scripts]
cclimits = "cclimits.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cclimits"]

[tool.ruff]
line-length = 100
target-version = "py39"
